--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: TutorD Scholars
-email: scholars@tutord.io
+title: Patrick Site
+email: pbabb@csu.fullerton.edu
 description: >- # this means to ignore newlines until "baseurl:"
   TutorD Scholars bridges the gap between professionals wanting to make an impact
   in their communities and students looking to gain grow and gain 21st century skills
@@ -28,7 +28,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: tutordscholars
-github_username: theTutorB
+github_username: pbabb2
 
 # Build settings
 theme: minima
