--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   in their communities and students looking to gain grow and gain 21st century skills
   through focused apprenticeship and mentorship programs.
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/tbd-bp" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: tutordscholars
 github_username: pbabb2
